--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/img/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>%VITE_APP_NAME%</title>
     <meta property="og:title" content="%VITE_APP_NAME%" />
     <meta property="og:description" content="%VITE_APP_DESC%" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="%VITE_APP_URL%" />
-    <meta property="og:image" content="%VITE_APP_URL%/favicon.png" />
+    <meta property="og:image" content="%VITE_APP_URL%/img/favicon.png" />
+    <link rel="stylesheet" href="/css/base.css">
   </head>
   <body>
     <div id="app"></div>
